# platelet

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
platelet-rust/: Cargo.toml
platelet-rust/src/: expression_eval.rs  expression_parser.rs  for_loop_parser.rs  for_loop_runner.rs  html.rs  html_parser.rs  lib.rs  renderer.rs  text_node.rs  types.rs
platelet-rust/tests/: example_component.html  example_index.html  multi_file.rs  real_files.rs  single_file.rs
platelet-web/: Cargo.toml
platelet-web/demo/: index.html
platelet-web/src/: lib.rs
platelet-web/web/: index.html
platelet-web/web/demo/: index.html
platelet-web/web/playground/: index.html  worker.js
src/: deno_dom.rs  expression_eval.rs  expression_parser.rs  for_loop_parser.rs  for_loop_runner.rs  html.rs  html_parser.rs  lib.rs  main.rs  platelet.rs  rcdom.rs  renderer.rs  text_node.rs  types.rs
web/: .prettierrc.json  index.html
web/demo/: index.html
