[package]
name = "platelet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.26.0"
markup5ever = "0.11.0"
regex = "1.10.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.116"
winnow = "0.6.8"
wasm-bindgen = "0.2"
