[package]
name = "platelet"
description = "HTML-first templating language"
license = "MIT"
version = "0.1.2"
edition = "2021"
documentation = "https://docs.rs/platelet/"
homepage = "https://angusjf.com/platelet/"
repository = "https://github.com/angusjf/platelet"
readme = "../README.md"

[dependencies]
html5ever = "0.26.0"
markup5ever = "0.11.0"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
winnow = "0.6.8"
